# delete

./: .gitignore
geyser_plugin/application/: configuration.json  readme.md
geyser_plugin/development_environment/resource/docker/: docker-compose.yaml
geyser_plugin/development_environment/resource/docker/service/solana/: dockerfile
geyser_plugin/development_environment/tool/rust/docker/: docker-compose.yaml
geyser_plugin/development_environment/tool/rust/docker/service/rust_stable_toolchain/: dockerfile
robot/application/application/: Cargo.toml  rustfmt.toml  todo.txt
robot/application/application/environment/: parse_transaction.example.toml  trade.example.toml
robot/development_environment/resource/docker/: .env  docker-compose.yaml
robot/development_environment/tool/rust/docker/: docker-compose.yaml
robot/development_environment/tool/rust/docker/service/rust_stable_toolchain/: dockerfile
robot/development_environment/tool/visual_studio_code_development_container/docker/: .devcontainer.json
server/application/application/: Cargo.toml  todo.txt
server/application/application/environment/: parse_transaction.example.toml  run.example.toml
server/development_environment/resource/docker/: docker-compose.yaml
server/development_environment/tool/rust/docker/: docker-compose.yaml
server/development_environment/tool/visual_studio_code_development_container/docker/: .devcontainer.json
